--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,1 +1,12 @@
+/* Tall section background + height */
+.tall-section {
+  background-color: #f2f2f2;
+  height: 1000px;     /* Tall enough to require scrolling */
+  padding: 20px;
+}
+
+/* Mobile dropdown menu background */
+.navbar-collapse {
+  background-color: #eee; 
+}
 
